; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-cache-metadata.c___create_persistent_data_objects.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-cache-metadata.c___create_persistent_data_objects.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_cache_metadata = type { i32, i32 }

@DM_CACHE_METADATA_BLOCK_SIZE = common dso_local global i32 0, align 4
@SECTOR_SHIFT = common dso_local global i32 0, align 4
@CACHE_MAX_CONCURRENT_LOCKS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"could not create block manager\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dm_cache_metadata*, i32)* @__create_persistent_data_objects to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__create_persistent_data_objects(%struct.dm_cache_metadata* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.dm_cache_metadata*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.dm_cache_metadata* %0, %struct.dm_cache_metadata** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.dm_cache_metadata*, %struct.dm_cache_metadata** %4, align 8
  %8 = getelementptr inbounds %struct.dm_cache_metadata, %struct.dm_cache_metadata* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @DM_CACHE_METADATA_BLOCK_SIZE, align 4
  %11 = load i32, i32* @SECTOR_SHIFT, align 4
  %12 = shl i32 %10, %11
  %13 = load i32, i32* @CACHE_MAX_CONCURRENT_LOCKS, align 4
  %14 = call i32 @dm_block_manager_create(i32 %9, i32 %12, i32 %13)
  %15 = load %struct.dm_cache_metadata*, %struct.dm_cache_metadata** %4, align 8
  %16 = getelementptr inbounds %struct.dm_cache_metadata, %struct.dm_cache_metadata* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 4
  %17 = load %struct.dm_cache_metadata*, %struct.dm_cache_metadata** %4, align 8
  %18 = getelementptr inbounds %struct.dm_cache_metadata, %struct.dm_cache_metadata* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i64 @IS_ERR(i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %28

22:                                               ; preds = %2
  %23 = call i32 @DMERR(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  %24 = load %struct.dm_cache_metadata*, %struct.dm_cache_metadata** %4, align 8
  %25 = getelementptr inbounds %struct.dm_cache_metadata, %struct.dm_cache_metadata* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @PTR_ERR(i32 %26)
  store i32 %27, i32* %3, align 4
  br label %41

28:                                               ; preds = %2
  %29 = load %struct.dm_cache_metadata*, %struct.dm_cache_metadata** %4, align 8
  %30 = load i32, i32* %5, align 4
  %31 = call i32 @__open_or_format_metadata(%struct.dm_cache_metadata* %29, i32 %30)
  store i32 %31, i32* %6, align 4
  %32 = load i32, i32* %6, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %39

34:                                               ; preds = %28
  %35 = load %struct.dm_cache_metadata*, %struct.dm_cache_metadata** %4, align 8
  %36 = getelementptr inbounds %struct.dm_cache_metadata, %struct.dm_cache_metadata* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @dm_block_manager_destroy(i32 %37)
  br label %39

39:                                               ; preds = %34, %28
  %40 = load i32, i32* %6, align 4
  store i32 %40, i32* %3, align 4
  br label %41

41:                                               ; preds = %39, %22
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local i32 @dm_block_manager_create(i32, i32, i32) #1

declare dso_local i64 @IS_ERR(i32) #1

declare dso_local i32 @DMERR(i8*) #1

declare dso_local i32 @PTR_ERR(i32) #1

declare dso_local i32 @__open_or_format_metadata(%struct.dm_cache_metadata*, i32) #1

declare dso_local i32 @dm_block_manager_destroy(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
